# refactorUtils

./: .gitignore  CODEBASE_DEPS_CLI_GUIDE.md  CODEBASE_EXTRACT_CLI_GUIDE.md  CODEBASE_REPORT_CLI_GUIDE.md  LICENSE  README.md  USAGE.md  USAGE_DEMO.md  main.py  pyproject.toml  requirements.txt  test_cut_mode.py  test_extraction.py  test_target_file_feature.py
core/: dependency_resolver.py  file_writer.py  import_analyzer.py  parser.py
services/: extractor_service.py
src/cli/: extractor_cli.py  report_cli.py
src/codebase_services/: __init__.py  main.py
src/codebase_services/cli/: __init__.py  dependency_cli.py  extractor_cli.py  report_cli.py
src/codebase_services/core/: dependency_resolver.py  file_writer.py  import_analyzer.py  import_optimizer.py  parser.py
src/codebase_services/entities/: entities.py
src/codebase_services/services/: __init__.py  dependency_tree_service.py  extractor_service.py  report_service.py
src/codebase_services/utils/: top_level_imports_detection.py
src/core/: __init__.py  dependency_resolver.py  file_writer.py  import_analyzer.py  import_optimizer.py  parser.py
src/entities/: __init__.py  entities.py
src/services/: __init__.py  extractor_service.py  report_service.py
src/utils/: top_level_imports_detection.py
